# rag-tutor

./: .dockerignore  .env.template  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  ingest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
eval/: dataset.example.json
rag_tutor/: __init__.py  __main__.py  config.py  conversations.py  feedback.py
rag_tutor/documents/: __init__.py  chunking.py  hashing.py  registry.py
rag_tutor/eval/: __init__.py  dataset.py  metrics.py  runner.py
rag_tutor/ingestion/: __init__.py  service.py
rag_tutor/llm/: __init__.py  embeddings.py  gemini_client.py  generation.py
rag_tutor/llm/providers/: __init__.py  base.py  bge.py  deepseek.py  factory.py  gemini.py  openai.py
rag_tutor/retrieval/: __init__.py  memory.py  query_expansion.py  rag_service.py  reranker.py  vector_store.py
rag_tutor/study/: __init__.py  flashcards.py  generate.py  quiz.py
rag_tutor/ui/: chat.py  citations.py  reader.py  sidebar.py  streaming.py  streamlit_app.py  study_modes.py  styles.py  suggestions.py
study_rag/: __init__.py  __main__.py  feedback.py
study_rag/documents/: __init__.py  chunking.py  pdf_loader.py  registry.py
study_rag/ingestion/: service.py
study_rag/llm/: embeddings.py  generation.py
study_rag/retrieval/: __init__.py  memory.py  prompts.py  rag_service.py  vector_store.py
study_rag/ui/: chat.py  sidebar.py  streamlit_app.py  styles.py
tests/: test_citations.py  test_conversations.py  test_eval_dataset.py  test_eval_metrics.py  test_eval_runner.py  test_hybrid.py  test_integration.py  test_reader.py  test_streaming.py  test_study.py  test_unit.py
