[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "study-rag"
version = "1.0.0"
description = "An interactive, AI-powered Retrieval-Augmented Generation (RAG) study assistant."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Study RAG Team"}
]
keywords = ["rag", "study", "assistant", "gemini", "chromadb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "streamlit==1.58.0",
    "google-genai==2.8.0",
    "chromadb==1.5.9",
    "python-dotenv==1.2.2",
    "pymupdf==1.27.2.3",
    "langchain-text-splitters==1.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["study_rag*"]
exclude = ["tests*", "venv*", "chroma_db*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
